Prevent typing notifier from overflowing

--- a/css/chat-controls.scss
+++ b/css/chat-controls.scss
@@ -3,15 +3,31 @@
 #chat-controls {
     margin-top: 3px;
 
-    & .typing-notify {
+    .typing-notify {
         color: $color-white-text;
         background: none;
+        margin-bottom: 2px;
+
+        > div {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0 6px;
+            margin: 0;
+        }
         
-        & .notify-text {
+        .notify-text {
             font-size: 13px;
+            flex: 1;
+            overflow: hidden;
+            padding: 0;
+            margin: 0;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            padding-left: 4px;
         }
 
-        & .dot {
+        .dot {
             color: $color-white-text !important;
             width: 4px;
             height: 4px;
@@ -23,7 +39,7 @@
     margin: 0 4px 4px;
     padding-bottom: 20px;
 
-    & #chat-message {
+    #chat-message {
         outline: none;
 
         &:focus {
